perf(android-model): incrementally rebuild paged history axis
Share HistoryAxisPage objects across publications and rebuild only dirty
seq pages on HTTP Range fills, keeping long-history updates off the
full resident-row scan path.

Co-authored-by: Cursor <cursoragent@cursor.com>